[package]
name = "rust-spotify"
version = "0.1.0"
authors = ["takahashi <hoge@fuga.piyo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
